news and stories updated

--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,10 @@ code {
 }
 
 .logo {
-  height: 32px;
-  background: rgba(255,255,255,.2);
-  margin: 16px;
+  height: 50px;
+  /*background: rgba(255,255,255,.2);*/
+  margin: 7px 14px;
+  text-align: center;
 }
 
 .trigger {
